// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TreeHandler/> render if node has ::isVisible = false, it should NOT render it 1`] = `
<DocumentFragment>
  <section
    class="tree"
  >
    <input
      class="tree_input"
      data-cy="tree-pattern"
      value=""
    />
    <div
      class="tree_content"
    />
  </section>
</DocumentFragment>
`;

exports[`<TreeHandler/> render with default/required props 1`] = `
<DocumentFragment>
  <section
    class="tree"
  >
    <input
      class="tree_input"
      data-cy="tree-pattern"
      value=""
    />
    <div
      class="tree_content"
    >
      <div
        class="tree-node--with-children"
        data-cy="tree-node-0"
        data-node="0"
      >
        <span>
          root node
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`<TreeHandler/> render with optional/required props 1`] = `
<DocumentFragment>
  <section
    class="tree optProps.className"
  >
    <input
      class="tree_input"
      data-cy="optProps.data-cytree-pattern"
      placeholder="optProps.patternPlaceholder"
      value=""
    />
    <div
      class="tree_content"
    >
      <div
        class="tree-node--with-children"
        data-cy="optProps.data-cytree-node-0"
        data-node="0"
      >
        <span>
          root node
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
